Bug 242110 [nsTXTToHTMLConv] angle brackets in gopher pages are not properly escaped/displayed r=darin sr=darin